# pro-worker

./: .pre-commit-config.yaml  activate.ps1  alembic.ini  pyproject.toml
backend/: main.py
backend/app/api/routes/: api.py
backend/app/api/utils/: file_operations.py  file_upload.py  hpe_oauth.py
backend/app/cache/: events.py  redis.py
backend/app/core/: config.py  events.py
backend/app/core/settings/: app.py  base.py  development.py  production.py  test.py
backend/app/db/: database.py  events.py  initial_data_loader.py
backend/app/services/ldap/: hpe_ldap.py
backend/app/services/o365/: email.py  user.py
frontend/: .gitignore  bun.lockb  components.json  index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/fonts/: Mark Simonson - Proxima Nova Alt Black-demo.html  Mark Simonson - Proxima Nova Alt Bold-demo.html  Mark Simonson - Proxima Nova Alt Condensed Semibold-demo.html  Mark Simonson - Proxima Nova Alt Regular-demo.html  fonts.css  fonts.min.css
frontend/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
frontend/src/apis/: apiClient.ts
frontend/src/app/: store.ts
frontend/src/assets/: index.ts
frontend/src/components/: Navbar.tsx
frontend/src/components/HomePage/: AboutSection.tsx  BannerLocation.tsx  BannerSection.tsx  BannerSection_2.tsx  (+7 more)
frontend/src/hooks/: useLanguageData.ts
frontend/src/routes/: __root.tsx  _adminlayout.tsx  about.lazy.tsx  blog.blogpost.tsx  blog.lazy.tsx  contact.lazy.tsx  index.lazy.tsx  partners.lazy.tsx  route.css  routes.tsx  services.lazy.tsx
frontend/src/types/: dataTypes.ts
(+18 files in other folders)
