[tool.poetry]
name = "fullstackfastapitemplate"
version = "0.1.0"
description = "A template repository for a full stack project using fastapi as backend and react as frontend"
authors = ["Basil T T <basil.tt@hpe.com>"]

# License (optional)
license = "MIT"

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
itsdangerous = "^2.2.0"
requests = "^2.32.3"
loguru = "^0.7.2"
pydantic-settings = "^2.3.3"
redis = "^5.0.6"
sqlalchemy = "^2.0.30"
sqlmodel = "^0.0.19"
pyodbc = "^5.1.0"
pre-commit = "^3.7.1"
asgi-lifespan = "^2.1.0"
pytest-asyncio = "^0.23.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
